--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -924,6 +924,11 @@ shivanshjoshi:
   github: shivanshjoshi
   author_image: 'blog-author.jpg'
   email: shiv.191mt044@nitk.edu.in
+shruthanr:
+  name: Shruthan R
+  github: shruthanr
+  author_image: shruthan.jpg
+  email: shruthan@outlook.com
 rakki-18:
   name: Rakshit P
   github: rakki-18
